--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,19 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+
+    //Toasty
+
+
+
+
     //for networking
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.material:material:1.1.0'
+
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
+
 
 }
