--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nazmul.metarnalhealth">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".doctors.DoctorEditProfileActivity"></activity>
+        <activity android:name=".mothers.firstaid.First_Aid_Home_Activity"></activity>
+        <activity android:name=".doctors.DoctorEditProfileActivity" />
         <activity android:name=".doctors.DoctorProfileActivity" />
         <activity android:name=".mothers.EditProfileActivity" />
         <activity android:name=".mothers.MotherProfile" />
@@ -28,5 +26,8 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
