--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".mothers.FirstaidActivity"></activity>
+        <activity android:name=".mothers.firstaid.FirstaidBeforeProsobActivity"></activity>
+        <activity android:name=".mothers.FirstaidActivity" />
         <activity android:name=".mothers.firstaid.First_Aid_Home_Activity" />
         <activity android:name=".doctors.DoctorEditProfileActivity" />
         <activity android:name=".doctors.DoctorProfileActivity" />
