--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".mothers.firstaid.Firstaid_after_3"></activity>
+        <activity android:name=".mothers.firstaid.FirstaidFistulaActivity"></activity>
+        <activity android:name=".mothers.firstaid.FirstAid_Before_7" />
+        <activity android:name=".mothers.firstaid.FirstAid_Before_6" />
+        <activity android:name=".mothers.firstaid.FirstAid_Before_5" />
+        <activity android:name=".mothers.firstaid.FirstAid_Before_4" />
+        <activity android:name=".mothers.firstaid.FirstAid_Before_3" />
+        <activity android:name=".mothers.firstaid.FirstAid_Before_2" />
+        <activity android:name=".mothers.firstaid.FirstAid_Before_1" />
+        <activity android:name=".mothers.firstaid.FirstaidBeforeProsobActivity" />
+        <activity android:name=".mothers.firstaid.Firstaid_after_3" />
         <activity android:name=".mothers.firstaid.Firstaid_after_2" />
         <activity android:name=".mothers.firstaid.Firstaid_after_1" />
         <activity android:name=".mothers.firstaid.FirstaidAfterProsobActivity" />
