--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nazmul.metarnalhealth">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".mothers.firstaid.Firstaid_Dubejaowa_Protirod_2"></activity>
+        <activity android:name=".doctors.DoctorsInfoViewActivity"></activity>
+        <activity android:name=".mothers.firstaid.Firstaid_Dubejaowa_Protirod_2" />
         <activity android:name=".mothers.firstaid.Firstaid_Dubejaowa_Protirod_1" />
         <activity android:name=".mothers.firstaid.Firstaid_Dubjaowa_Protirod" />
         <activity android:name=".mothers.firstaid.Firstaid_Shishu_Niumonia" />
@@ -52,5 +49,9 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
