--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".doctors.DoctorAppoinmentHistory"></activity>
+        <activity android:name=".mothers.HospitalInfoActivity"></activity>
+        <activity android:name=".doctors.DoctorAppoinmentHistory" />
         <activity android:name=".mothers.MotherAppoinmentHistory" />
         <activity android:name=".doctors.DoctorDescriptionActivity" />
         <activity android:name=".doctors.DoctorsInfoViewActivity" />
