--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nazmul.metarnalhealth">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".doctors.Confirm_Appoinment_Activity"></activity>
+        <activity android:name=".mothers.Hospital_Call_Activity"></activity>
+        <activity android:name=".mothers.HospitalDescriprionActivity" />
+        <activity android:name=".doctors.Confirm_Appoinment_Activity" />
         <activity android:name=".mothers.HospitalInfoActivity" />
         <activity android:name=".doctors.DoctorAppoinmentHistory" />
         <activity android:name=".mothers.MotherAppoinmentHistory" />
@@ -53,9 +59,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
